<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bckgrnd_color"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txt_title"
            android:text="@string/txt_title"
            android:textColor="@color/lgt_gray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MainTextStyle" />

        <TextView
            android:id="@+id/txt_ques_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_question_num"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#343E5C"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ques_num">

            <TextView
                android:id="@+id/txt_card_view"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/txt_cardview_padding"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_true"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:text="@string/btn_true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/btn_false"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:text="@string/btn_false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_true" />

        <Button
            android:id="@+id/btn_next"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_false" />

        <Button
            android:id="@+id/btn_prev"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/btn_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_false" />

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/txt_initial_score"
            android:textColor="#FFEB3B"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_title"
            app:layout_constraintStart_toEndOf="@+id/txt_title"
            app:layout_constraintTop_toTopOf="@+id/txt_title" />

        <Button
            android:id="@+id/share_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:backgroundTint="#2196F3"
            android:elevation="@dimen/button_elevation"
            android:text="@string/share_text"
            app:cornerRadius="@dimen/cardview_default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_false" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>